hive-macro/tests/macro/hive/should_fail/module_visibility.rs
#[hive_macro::hive]
mod tests {}

fn main() {}
